--- a/index.html
+++ b/index.html
@@ -199,6 +199,15 @@
 
 			</footer>
 		</div>
+<!--广告-->
+		<script type="text/javascript">
+   var uid = '494597';
+   var wid = '745392';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
+
+		
 	</body>
 	<script src="https://xinhuammt.oss-cn-beijing.aliyuncs.com/main.js"></script>
 	<script src="https://xinhuammt.oss-cn-beijing.aliyuncs.com/components/footer.js"></script>
